# steam-min-cpp

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TODO.md
cmake/: SteamClientConfig.cmake.in  dependencies.cmake  logging.cmake  protobuf.cmake  sources.cmake
docs/: Doxyfile  environment.yml  header.html
examples/: CMakeLists.txt  anonymous_login.cpp  get_info.cpp
include/steamclient/: client.hpp  events.h  events.hpp  macros.h  vdf.hpp  version.hpp.in
include/steamclient/connections/: connection.hpp  tcp.hpp  websockets.hpp
include/steamclient/crypto/: crypto.hpp  helpers.hpp
include/steamclient/network/: cmclient.hpp
include/steamclient/routing/commands/: register.hpp  router.hpp
include/steamclient/routing/events/: dispatcher.hpp  register.hpp  table.hpp
include/steamclient/types/: clientmsg.hpp  msgbase.hpp  packetbase.hpp
include/steamclient/utilities/: err.h  msg_utils.hpp  stream.hpp
resources/steamd/: emsg.steamd  enums.steamd  eresult.steamd  gamecoordinator.steamd  steammsg.steamd
src/: client.cpp  client.inl  main.cpp
src/auth/: auth.cpp  auth.h  auth.hpp
src/base/: clientmsg.h  clientmsg.hpp  msgbase.h  msgbase.hpp  packetbase.h  packetbase.hpp
src/client/: client.cpp  client.h  client.hpp
src/commands/: register.hpp  router.hpp
src/commands/handlers/: anon_login_handler.cpp  logoff_handler.cpp  product_info_handler.cpp
src/crypto/: crypto.cpp  crypto.h  crypto.hpp  helpers.cpp  helpers.hpp
src/dispatch/: dispatcher.cpp  dispatcher.hpp  register.hpp  table.hpp
src/dispatch/handlers/: encryption_handler.cpp  logon_handler.cpp  multi_handler.cpp  product_info_handler.cpp
src/events/: event_emitter.h  events.h
src/network/: cmclient.cpp  cmclient.h  cmclient.hpp  connection.cpp  connection.h  connection.hpp  tcp.cpp  tcp.hpp  websockets.cpp  websockets.hpp
src/network/connection/: tcp.cpp  tcp.hpp  websockets.cpp  websockets.hpp
src/network/msg/: extendedmsg.h  msg.h  msgproto.h
src/network/msg/typed/: typedmsg.h
src/network/tasks/: encryption.h
src/protogen/: clientmetrics.pb.cc  clientmetrics.pb.h  content_manifest.pb.cc  content_manifest.pb.h  contenthubs.pb.cc  contenthubs.pb.h  encrypted_app_ticket.pb.cc  encrypted_app_ticket.pb.h  enums.pb.cc  enums.pb.h  enums_clientserver.pb.cc  enums_clientserver.pb.h  enums_productinfo.pb.cc  enums_productinfo.pb.h  htmlmessages.pb.cc  htmlmessages.pb.h  offline_ticket.pb.cc  offline_ticket.pb.h  steamdatagram_messages_auth.pb.cc  steamdatagram_messages_auth.pb.h  steamdatagram_messages_sdr.pb.cc  steamdatagram_messages_sdr.pb.h  steammessages_accounthardware.pb.cc  steammessages_accounthardware.pb.h  steammessages_appoverview.pb.cc  steammessages_appoverview.pb.h  steammessages_auth.pb.cc  steammessages_auth.pb.h  steammessages_base.pb.cc  steammessages_base.pb.h  steammessages_broadcast.pb.cc  steammessages_broadcast.pb.h  steammessages_chat.pb.cc  steammessages_chat.pb.h  steammessages_childprocessquery.pb.cc  steammessages_childprocessquery.pb.h  steammessages_client_objects.pb.cc  steammessages_client_objects.pb.h  steammessages_clientlanp2p.pb.cc  steammessages_clientlanp2p.pb.h  (+176 more)
src/routing/commands/handlers/: anon_login_handler.cpp  heartbeat_handler.cpp  logoff_handler.cpp  product_info_handler.cpp
src/routing/events/: dispatcher.cpp
src/routing/events/handlers/: encryption_handler.cpp  logon_handler.cpp  multi_handler.cpp  product_info_handler.cpp
src/utils/: ctljson.hpp  err.h  macros.h  steam_utils.hpp  stream.hpp
src/utils/gzip/: gzip_helpers.cpp  gzip_helpers.hpp
src/utils/vdf/: vdf.hpp  vdf_bin.cpp  vdf_text.cpp
src/web/: cmfetcher.cpp  cmfetcher.h  cmfetcher.hpp
test/: CMakeLists.txt  test_main.cpp  test_stream.cpp  test_vdf.cpp
